--- a/app.json
+++ b/app.json
@@ -50,7 +50,7 @@
 
         },
 
-        "FRWD_CHANNEL": {
+        "FROM_CHANNEL": {
 
             "description": "Add your bot to a channel and paste the Channel ID here.",
 
